ingress-prod-rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: prod
  annotations:
    ingress.bluemix.net/redirect-to-https: "true"
  # Change to your application name
  name: <YOUR_APP_NAME>
spec:
  tls:
  - hosts:
    - beaware.uk-south.containers.mybluemix.net
    secretName: default/beaware
  rules:
  - host: beaware.uk-south.containers.mybluemix.net
    http:
      paths:
      - backend:
          # Change to your service name (kubernetes service)
          serviceName: <SERVICE_NAME>
          Change to your service port
          servicePort: <SERVICEPORT>
          # URL Suffix for example "/my-service"
        path: <URL_SUFFIX>
